--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "@spms/angular-icons": "^0.2.3",
-    "@spms/ui-angular": "^0.2.5",
+    "@spms/angular-icons": "file:spms-angular-icons-0.3.1.tgz",
+    "@spms/styleguide": "file:spms-styleguide-0.2.9.tgz",
+    "@spms/ui-angular": "file:spms-ui-angular-0.3.5.tgz",
     "primeicons": "^6.0.1",
     "primeng": "^16.6.0",
     "rxjs": "~7.8.0",
